--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,7 @@ li {
   display: flex;
   margin-bottom: 30px;
   align-items: center;
+  padding: 0 15px;
 }
 @media only screen and (max-width: 991px) {
   .tv__sign {
@@ -338,6 +339,7 @@ li {
   line-height: 20px;
   letter-spacing: 0.501px;
   margin-bottom: 0;
+  padding-left: 0;
 }
 @media only screen and (max-width: 991px) {
   .tv__sign p {
@@ -355,7 +357,7 @@ li {
 }
 @media only screen and (max-width: 991px) {
   .tv__sign ul {
-    padding: 2px 16px 0;
+    padding: 2px 0;
   }
 }
 .tv__sign ul li {
